Changed the line spacing to be responsive and added top margin to the button to fix overflow out of the banner for certain screen sizes.

--- a/vera-react-app/src/components/StoryBanner/storyBanner.css
+++ b/vera-react-app/src/components/StoryBanner/storyBanner.css
@@ -22,8 +22,7 @@ div#story-banner-img-col, div#story-banner-text-col {
     }
 }
 
-
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
     #story-banner-img-col{
         height: 200px;
     }
@@ -46,9 +45,10 @@ h1#story-banner-text-title {
 p#story-banner-text-paragraph {
     font-weight: 300;
     font-size: 20px;
-    line-height: 30px;
+    line-height: 1.2em; 
     letter-spacing: 0.05em;
     margin: 0.5%;
+    display: block;
 }
 
 div#story-banner-text {
@@ -77,4 +77,5 @@ button#story-banner-button {
     align-self: center;
     background: white;
     box-shadow: 4px 4px 15px rgba(114, 141, 149, 0.3);
+    margin-top: 5%;
 }
